--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Block Game</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<div id="score">Score: 0</div>
+<h1>🟢 초록은 먹고 🔴 빨강은 피하기</h1>
+<h2 id="score">Score: 0</h2>
 
 <div id="game">
+
   <div id="player"></div>
-</div>
 
-<!-- 시작 화면 -->
-<div id="startOverlay" class="overlay">
-  <div class="overlay-content">
-    <h2>🏆 랭킹 TOP 3🏆</h2>
+  <!-- 시작 화면 -->
+  <div id="startOverlay" class="overlay">
+    <h2>게임 시작</h2>
+    <input type="text" id="nicknameInput" placeholder="닉네임 입력" />
+    <button id="startBtn">START</button>
+
+    <h3>🏆 TOP 3</h3>
     <ul id="ranking"></ul>
-
-    <input id="nicknameInput" placeholder="닉네임 입력">
-    <button id="startBtn">Start</button>
   </div>
-</div>
 
-<!-- 게임 오버 화면 -->
-<div id="gameOverOverlay" class="overlay" style="display:none;">
-  <div class="overlay-content">
-    <h2>Game Over</h2>
+  <!-- 게임 오버 화면 -->
+  <div id="gameOverOverlay" class="overlay" style="display:none;">
+    <h2>GAME OVER</h2>
     <p id="finalScore"></p>
+    <button id="restartBtn">다시하기</button>
 
-    <h3>전체 랭킹</h3>
+    <h3>🏆 전체 랭킹</h3>
     <ul id="finalRanking"></ul>
-
-    <button id="restartBtn">Restart</button>
   </div>
+
 </div>
 
 <script src="script.js"></script>
