--- a/index.html
+++ b/index.html
@@ -2,44 +2,31 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Block Game</title>
+  
+  <!-- 🔥 모바일 확대 방지 핵심 -->
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <title>Fish Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<h2 id="score">Score: 0</h2>
+  <div id="score">Score: 0</div>
 
-<div id="game">
-
-  <div id="player"></div>
-
-  <!-- 시작 화면 -->
-  <div id="startOverlay" class="overlay">
-    <div class="overlay-content">
-      <h2>게임 시작</h2>
-      <input type="text" id="nicknameInput" placeholder="닉네임 입력" />
-      <button id="startBtn">START</button>
-
-      <h3>🏆 TOP 3</h3>
-      <ul id="ranking"></ul>
-    </div>
+  <div id="game">
+    <div id="player">🐟</div>
   </div>
 
-  <!-- 게임 오버 화면 -->
-  <div id="gameOverOverlay" class="overlay" style="display:none;">
-    <div class="overlay-content">
-      <h2>GAME OVER</h2>
+  <!-- 게임오버 창 -->
+  <div id="gameOverOverlay" class="hidden">
+    <div class="modal">
+      <h1>GAME OVER</h1>
       <p id="finalScore"></p>
-      <button id="restartBtn">다시하기</button>
-
-      <h3>🏆 전체 랭킹</h3>
-      <ul id="finalRanking"></ul>
+      <button onclick="restartGame()">다시하기</button>
     </div>
   </div>
 
-</div>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
